初始化番茄页面，初始化Redux

--- a/src/components/Todos/TodoItem.scss
+++ b/src/components/Todos/TodoItem.scss
@@ -4,7 +4,7 @@
   padding: 8px 0 8px 8px;
   border-bottom: 1px solid #ddd;
   &:hover{background: #f9f9f9}
-  &.editing{background: #fff3d2}
+  &.editing{background: #f9f9f9}
   &:first-child{
     border-top: 1px solid #ddd;
   }
