--- a/src/components/Tomatoes/TomatoAction.scss
+++ b/src/components/Tomatoes/TomatoAction.scss
@@ -3,6 +3,9 @@
   .inputWrapper {
     position: relative;
   }
+  .startTomatoButton{
+    width: 100%;
+  }
   .abort {
     position: absolute;
     right: -6px;
