--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -6,8 +6,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 0;
+    padding: 16px 0 4px;
     border-bottom: 1px solid #ddd;
+    h1{
+      margin: 0;
+      font-size: 20px;
+    }
+    .logo{
+      height: 20px;
+      margin-right: 4px;
+    }
   }
   >main{
     padding: 16px 0;
